@@ -5,19 +5,23 @@ import (
 )
 
 func TestTweetBody(t *testing.T) {
-	got, err := tweetBody(tweet{ID: "1234", User: "johndoe", Text: "foo bar"})
+	got, err := tweetBody(tweet{
+		ID:   "1234",
+		User: "johndoe",
+		Text: "Hello &amp; world!"})
+
 	if err != nil {
 		t.Errorf("Error on tweetBody(tweet{...}): %v", err)
 	}
 
 	wont := `@johndoe
 
-foo bar
+Hello & world!
 
 https://twitter.com/johndoe/status/1234`
 
 	if got != wont {
-		t.Errorf(`tweetBody(tweet{ID: "1234", User: "johndoe", Text: "foo bar"})
+		t.Errorf(`tweetBody(tweet{ID: "1234", User: "johndoe", Text: "Hello &amp; world!"})
 get:
 %v
 
